--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="portofolio-info">
                             <div class="portofolio-title">
                                 <h4>Figma Design Lab</h4>
-                                <a href="https://www.figma.com/proto/N7YAS94Rg8a5ibgC7f3on5/Figma-basics?node-id=643-303&t=YcKIWNqsBFiIYABE-1" class="portofolio-link">
+                                <a href="https://www.figma.com/proto/N7YAS94Rg8a5ibgC7f3on5/Figma-basics?node-id=643-303&t=YcKIWNqsBFiIYABE-1" class="portofolio-link" target="_blank" aria-label="Figma">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
                                 </a>
                                 
@@ -127,48 +127,48 @@
 
                     <div class="portofolio">
                         <div class="portofolio-cover">
-                            <img src="./images/portofolios/porto web.jpg" alt="porto web"/>
+                            <img src="./images/portofolios/porto 2.jpg" alt="porto 2"/>
                         </div>
 
                         <div class="portofolio-info">
                             <div class="portofolio-title">
                                 <h4>Web Design</h4>
-                                <a href="dokumen1.pdf" class="portofolio-link">
+                                <a href="dokumen1.pdf" class="portofolio-link" target="_blank" aria-label="Sertifikat">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
                                 </a>
                             </div>
 
                             <div class="portofolio-tags">
-                                <div>Vue</div>
+                                <div>No-Code</div>
                                 <div>Contentfull</div>
                             </div>
 
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nihil adipisci voluptates beatae voluptatibus harum sed aut non deleniti nam!
+                                Belajar cara membuat website tanpa coding, membangun situs yang menarik dan mudah digunakan hanya dengan menggunakan platform no-code. Kini buat website responsif, dan mudah dikelola tanpa harus ngoding.
                             </p>
                         </div>
                     </div>
 
                     <div class="portofolio">
                         <div class="portofolio-cover">
-                            <img src="./images/portofolios/porto web1.png" alt="porto web1"/>
+                            <img src="./images/portofolios/porto 3.jpg" alt="porto 3"/>
                         </div>
 
                         <div class="portofolio-info">
                             <div class="portofolio-title">
-                                <h4>Dasboard Admin</h4>
-                                <a href="/" class="portofolio-link">
+                                <h4>Web Application Developer</h4>
+                                <a href="dokumen2.pdf" class="portofolio-link" target="_blank" aria-label="Sertifikat">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
                                 </a>
                             </div>
 
                             <div class="portofolio-tags">
-                                <div>Vue</div>
-                                <div>Material terserah</div>
+                                <div>Javascript</div>
+                                <div>Node.js</div>
                             </div>
 
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nihil adipisci voluptates beatae voluptatibus harum sed aut non deleniti nam!
+                                Setelah mengikuti pelatihan pembuatan aplikasi menggunakan JavaScript dan Node.js, saya belajar bagaimana membangun aplikasi web yang efisien dan mudah digunakan. Menguasai dasar-dasar pengembangan aplikasi dengan menggunakan JavaScript untuk tampilan depan dan Node.js untuk bagian belakang, sehingga aplikasi yang saya buat bisa berjalan dengan lancar dan responsif. Saya berkomitmen untuk membuat aplikasi yang simpel namun tetap memiliki performa yang baik.
                             </p>
                         </div>
                     </div>
@@ -222,24 +222,22 @@
                     </div>
                     <div class="skills-right">
                         <p>
-                           YA INI TERSERAH AJAA Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quisquam molestiae nam, quae laborum culpa excepturi nesciunt atque cumque tenetur aperiam ut repellat earum perferendis vitae, quos distinctio. Repellat, eius?
+                            Saya memiliki keahlian dalam berbagai teknologi dan mampu menciptakan solusi digital yang efektif dan fungsional. Selain itu, saya juga seorang pebisnis yang aktif mengelola usaha kecil. Meskipun masih dalam tahap pengembangan, saya berfokus pada strategi pemasaran dan penjualan untuk mengembangkan bisnis, sambil terus berinovasi dengan teknologi untuk menciptakan pengalaman yang lebih baik bagi pelanggan.
                         </p>
 
                         <div class="skills-list">
                             <ul>
                                 <li>HTML</li>
-                                <li>Node Js</li>
+                                <li>Node.Js</li>
                                 <li>C++</li>
-                                <li>CSS</li>
-                                <li>MongoDB</li>
+                                <li>Javascript</li>
                             </ul>
                             
                             <ul>
-                                <li>Penulis Handall</li>
-                                <li>Node Js</li>
-                                <li>C++</li>
                                 <li>CSS</li>
-                                <li>MongoDB</li>
+                                <li>Business Development </li>
+                                <li>Content Writer</li>
+                                <li>Entrepreneur</li>
                             </ul>
                         </div>
                     </div>
@@ -304,10 +302,10 @@
 
         <footer>
             <div class="footer-icons">
-                <a href="#">
+                <a href="https://www.instagram.com/eka3058" class="footer-link" target="_blank" aria-label="Instagram">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
                 </a>
-                <a href="#">
+                <a href="https://github.com/Eka027" class="footer-link" target="_blank" aria-label="Github">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                 </a>
             </div>
