--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 9c0-.552-.447-1-1-1-.729 0-1.295.79-.832 1.521-1.199 1.439-3.355 2.979-4.355 2.438-1.201-.65-.277-3.302.451-4.982.957.149 1.736-.588 1.736-1.477 0-.829-.672-1.5-1.5-1.5s-1.5.671-1.5 1.5c0 .452.204.853.52 1.127-.646 1.646-2.329 3.81-3.41 3.591-1.347-.268-1.69-3.448-1.685-5.287.62-.183 1.075-.751 1.075-1.431 0-.829-.672-1.5-1.5-1.5s-1.5.671-1.5 1.5c0 .68.455 1.248 1.075 1.432.006 1.839-.338 5.019-1.685 5.287-1.08.218-2.763-1.945-3.41-3.592.316-.274.52-.675.52-1.127 0-.829-.672-1.5-1.5-1.5s-1.5.671-1.5 1.5c0 .889.779 1.626 1.736 1.476.729 1.681 1.652 4.333.451 4.982-1 .541-3.155-.999-4.355-2.438.463-.73-.103-1.52-.832-1.52-.553 0-1 .448-1 1 0 .708.727 1.22 1.413.905 4.277 4.767 3.587 10.584 3.587 12.095h14c0-1.445-.707-7.308 3.587-12.095.686.315 1.413-.197 1.413-.905zm-15.42 3.001c1.277.513 2.562.148 3.42-.834.858.982 2.143 1.347 3.42.834.393 1.211 1.447 1.945 2.555 2.052-.381.976-.686 1.981-.854 2.947h-10.242c-.168-.965-.473-1.971-.854-2.947 1.103-.106 2.161-.835 2.555-2.052zm-1.58 7.999v-1h10v1h-10z"/></svg>
                         </div>
                         <h4>UI/UX Design</h4>
-                        <p>awok awok tapi ohongsdvw tapi monyet doraemon anjayyadi sipaling oke mantap betul tiktok reply cave mahal kita hiling njayy
+                        <p>Berpengalaman dalam mengelola toko online, termasuk penjualan produk, strategi pemasaran, dan pengelolaan pelanggan secara efektif.
                         </p>
                     </div>
 
@@ -75,8 +75,8 @@
                         <div class="service-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M3 20c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm0-2c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm9 2c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm0-2c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm0-16c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm0-2c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm9 20c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm0-2c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm-1.577-1.721l-6.423-5.028v-3.352c-.323.066-.658.101-1 .101s-.677-.035-1-.101v3.352l-6.424 5.028c.695.233 1.323.602 1.844 1.093l5.58-4.372 5.579 4.373c.522-.492 1.15-.861 1.844-1.094z"/></svg>
                         </div>
-                        <h4>Aplication apalah seterah kamu</h4>
-                        <p>awok awok tapi ohongsdvwwfhggggggg
+                        <h4>Web Aplication</h4>
+                        <p>Mengembangkan aplikasi web interaktif dan responsif, disesuaikan dengan kebutuhan bisnis Anda untuk performa maksimal.
                         </p>
                     </div>
 
@@ -84,8 +84,8 @@
                         <div class="service-icon">
                             <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M12 0c6.623 0 12 5.377 12 12s-5.377 12-12 12-12-5.377-12-12 5.377-12 12-12m2.557 16h-5.115c.546 2.46 1.441 4.114 2.558 5.744 1.194-1.741 2.041-3.41 2.557-5.744m-7.157 0h-4.567c1.236 2.825 3.704 4.972 6.755 5.716-1.048-1.733-1.783-3.658-2.188-5.716m13.767 0h-4.567c-.391 1.988-1.095 3.887-2.175 5.694 3.012-.763 5.517-2.895 6.742-5.694m-14.005-6h-4.962c-.267 1.313-.267 2.685 0 4h4.915c-.119-1.329-.101-2.672.047-4m7.661 0h-5.647c-.165 1.326-.185 2.672-.053 4h5.753c.133-1.328.111-2.673-.053-4m6.977 0h-4.963c.148 1.328.166 2.671.048 4h4.915c.26-1.285.273-2.648 0-4m-12.156-7.729c-3.077.732-5.567 2.886-6.811 5.729h4.653c.435-2.042 1.178-3.985 2.158-5.729m2.355-.048c-1.089 1.77-1.91 3.453-2.463 5.777h4.927c-.534-2.246-1.337-3.948-2.464-5.777m2.368.069c1.013 1.812 1.733 3.76 2.146 5.708h4.654c-1.232-2.816-3.762-4.958-6.8-5.708"/></svg>
                         </div>
-                        <h4>DODOLAN BUKET</h4>
-                        <p>awok awok tapi ohongsdvwwfhg
+                        <h4>E-Commerce Management</h4>
+                        <p>Berpengalaman dalam mengelola toko online, termasuk penjualan produk, strategi pemasaran, dan pengelolaan pelanggan secara efektif.
                         </p>
                     </div>
                 </div>      
