--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
 
                     <nav>
                          <ul>
-                            <li><a href="#services">Services</a></li>
+                            <li><a href="#Services">Services</a></li>
                             <li><a href="#portofolios">Portofolio</a></li>
                             <li><a href="#skills">Skills</a></li>
                             <li><a href="#contact">Contact</a></li>
-                            <li><a href="#/resume.pdf" target="_blank">
                             <li>
-                                <a href="/resume.pdf" target="_blank">
+                                <a href="Resume cv.pdf" target="_blank">
                                     <button class="btn">Resume</button>
                                 </a>
                             </li>
