--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Eka Fitriana - Software Engineer</title>
+        <title>Eka Fitriana - Web Developer</title>
         <link rel="stylesheet" href="./styles/style.css" />
         <link rel="stylesheet" href="./styles/responsive.css" />
     </head>
