--- a/index.html
+++ b/index.html
@@ -171,6 +171,30 @@
                             </p>
                         </div>
                     </div>
+
+                    <div class="portofolio">
+                        <div class="portofolio-cover">
+                            <img src="./images/portofolios/porto hotel.png" alt="porto hotel"/>
+                        </div>
+
+                        <div class="portofolio-info">
+                            <div class="portofolio-title">
+                                <h4>Aplication Design</h4>
+                                <a href="https://sistem-hotel-zeta.vercel.app/" target="_blank">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z"/></svg>
+                                </a>
+                            </div>
+
+                            <div class="portofolio-tags">
+                                <div>HTML</div>
+                                <div>CSS</div>
+                            </div>
+
+                            <p>
+                                AG Hotel, tempat di mana kemewahan bertemu kenyamanan. Dengan desain elegan, fasilitas modern, dan pelayanan berkelas dunia, kami menciptakan pengalaman menginap yang tak terlupakan. Nikmati keindahan interior yang memanjakan, kamar mewah dengan pemandangan menakjubkan, dan layanan personal yang dirancang khusus untuk Anda. AG Hotel adalah definisi sejati dari kemewahan dan keistimewaan.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div> 
         </section>
