--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <div class="main-container">
                  <div class="nav">
                     <div class="logo">
-                        <a href="/">DA</a>
+                        <a href="/">Eka Fitriana</a>
                     </div>
 
                     <nav>
@@ -26,7 +26,8 @@
                             <li><a href="#contact">Contact</a></li>
                             <li>
                                 <a href="Resume cv.pdf" target="_blank">
-                                    <button class="btn">Resume</button>
+                                    <button id="resume-btn" class="btn">Resume</button>
+                                    <button id="toggle-mode">🌙 Mode Malam</button>
                                 </a>
                             </li>
                          </ul>
@@ -44,11 +45,11 @@
                        <h3 class="pre-title">My Name Is</h3>
                        <h1 class="hero-name">Eka <span>Fitriana</span></h1>
                        <p>
-                        Mahasiswa Informatika yang memiliki minat dalam pengembangan perangkat lunak, desain aplikasi, dan analisis data. Aktif dalam proyek kolaboratif dan pengembangan solusi kreatif untuk tantangan teknologi. Saat ini sedang memperdalam keahlian di bidang kecerdasan buatan dan pengembangan aplikasi berbasis web.
+                        I am a Computer Science student with experience in Web Development, UI/UX Design, and Data Analytics. Skilled in building responsive and efficient web applications and experienced in implementing web systems. I have developed various projects, including e-commerce platforms and a personal portfolio. I am seeking opportunities to apply my technical and analytical skills in software development, contributing to innovation and the creation of effective technological solutions.
                        </p>
                     </div>
                     <div class="hero-right">
-                       <img src="./images/hero.svg" alt="Person Standing" />
+                       <img src="./images/hero.jpg" alt="Person Standing" />
                     </div>
                 </section>
            </div>
@@ -66,7 +67,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 9c0-.552-.447-1-1-1-.729 0-1.295.79-.832 1.521-1.199 1.439-3.355 2.979-4.355 2.438-1.201-.65-.277-3.302.451-4.982.957.149 1.736-.588 1.736-1.477 0-.829-.672-1.5-1.5-1.5s-1.5.671-1.5 1.5c0 .452.204.853.52 1.127-.646 1.646-2.329 3.81-3.41 3.591-1.347-.268-1.69-3.448-1.685-5.287.62-.183 1.075-.751 1.075-1.431 0-.829-.672-1.5-1.5-1.5s-1.5.671-1.5 1.5c0 .68.455 1.248 1.075 1.432.006 1.839-.338 5.019-1.685 5.287-1.08.218-2.763-1.945-3.41-3.592.316-.274.52-.675.52-1.127 0-.829-.672-1.5-1.5-1.5s-1.5.671-1.5 1.5c0 .889.779 1.626 1.736 1.476.729 1.681 1.652 4.333.451 4.982-1 .541-3.155-.999-4.355-2.438.463-.73-.103-1.52-.832-1.52-.553 0-1 .448-1 1 0 .708.727 1.22 1.413.905 4.277 4.767 3.587 10.584 3.587 12.095h14c0-1.445-.707-7.308 3.587-12.095.686.315 1.413-.197 1.413-.905zm-15.42 3.001c1.277.513 2.562.148 3.42-.834.858.982 2.143 1.347 3.42.834.393 1.211 1.447 1.945 2.555 2.052-.381.976-.686 1.981-.854 2.947h-10.242c-.168-.965-.473-1.971-.854-2.947 1.103-.106 2.161-.835 2.555-2.052zm-1.58 7.999v-1h10v1h-10z"/></svg>
                         </div>
                         <h4>UI/UX Design</h4>
-                        <p>Berpengalaman dalam mengelola toko online, termasuk penjualan produk, strategi pemasaran, dan pengelolaan pelanggan secara efektif.
+                        <p>Passionate about UI/UX design, creating intuitive and user-friendly interfaces to enhance digital experiences
                         </p>
                     </div>
 
@@ -75,7 +76,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M3 20c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm0-2c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm9 2c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm0-2c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm0-16c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm0-2c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm9 20c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm0-2c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm-1.577-1.721l-6.423-5.028v-3.352c-.323.066-.658.101-1 .101s-.677-.035-1-.101v3.352l-6.424 5.028c.695.233 1.323.602 1.844 1.093l5.58-4.372 5.579 4.373c.522-.492 1.15-.861 1.844-1.094z"/></svg>
                         </div>
                         <h4>Web Aplication</h4>
-                        <p>Mengembangkan aplikasi web interaktif dan responsif, disesuaikan dengan kebutuhan bisnis Anda untuk performa maksimal.
+                        <p>Developing interactive and responsive web applications, tailored to your business needs for maximum performance.
                         </p>
                     </div>
 
@@ -84,7 +85,7 @@
                             <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M12 0c6.623 0 12 5.377 12 12s-5.377 12-12 12-12-5.377-12-12 5.377-12 12-12m2.557 16h-5.115c.546 2.46 1.441 4.114 2.558 5.744 1.194-1.741 2.041-3.41 2.557-5.744m-7.157 0h-4.567c1.236 2.825 3.704 4.972 6.755 5.716-1.048-1.733-1.783-3.658-2.188-5.716m13.767 0h-4.567c-.391 1.988-1.095 3.887-2.175 5.694 3.012-.763 5.517-2.895 6.742-5.694m-14.005-6h-4.962c-.267 1.313-.267 2.685 0 4h4.915c-.119-1.329-.101-2.672.047-4m7.661 0h-5.647c-.165 1.326-.185 2.672-.053 4h5.753c.133-1.328.111-2.673-.053-4m6.977 0h-4.963c.148 1.328.166 2.671.048 4h4.915c.26-1.285.273-2.648 0-4m-12.156-7.729c-3.077.732-5.567 2.886-6.811 5.729h4.653c.435-2.042 1.178-3.985 2.158-5.729m2.355-.048c-1.089 1.77-1.91 3.453-2.463 5.777h4.927c-.534-2.246-1.337-3.948-2.464-5.777m2.368.069c1.013 1.812 1.733 3.76 2.146 5.708h4.654c-1.232-2.816-3.762-4.958-6.8-5.708"/></svg>
                         </div>
                         <h4>E-Commerce Management</h4>
-                        <p>Berpengalaman dalam mengelola toko online, termasuk penjualan produk, strategi pemasaran, dan pengelolaan pelanggan secara efektif.
+                        <p>Experienced in managing online stores, including product sales, marketing strategies, and effective customer management.
                         </p>
                     </div>
                 </div>      
@@ -118,8 +119,7 @@
                             </div>
 
                             <p>
-                                "Bnue Fleur: Toko Buket Online dengan Sentuhan Elegan!"
-                                <p> Desain prototip ini mengutamakan kemudahan pengguna, keindahan visual, dan kenyamanan dalam memilih buket favorit Anda. Dengan navigasi intuitif, tampilan modern, dan fitur personalisasi, memesan buket impian kini hanya sejauh klik!" </p>
+                                This prototype is designed with user-friendliness, stunning visuals, and a seamless bouquet selection experience in mind. With intuitive navigation, a modern aesthetic, and personalized features, ordering your dream bouquet is now just a click away!
                             </p>
                         </div> 
                     </div>
@@ -143,7 +143,7 @@
                             </div>
 
                             <p>
-                                Belajar cara membuat website tanpa coding, membangun situs yang menarik dan mudah digunakan hanya dengan menggunakan platform no-code. Kini buat website responsif, dan mudah dikelola tanpa harus ngoding.
+                                Build an attractive and user-friendly site using no-code platforms. Now, you can create a responsive and easily manageable website without writing a single line of code!
                             </p>
                         </div>
                     </div>
@@ -167,14 +167,14 @@
                             </div>
 
                             <p>
-                                Setelah mengikuti pelatihan pembuatan aplikasi menggunakan JavaScript dan Node.js, saya belajar bagaimana membangun aplikasi web yang efisien dan mudah digunakan. Menguasai dasar-dasar pengembangan aplikasi dengan menggunakan JavaScript untuk tampilan depan dan Node.js untuk bagian belakang, sehingga aplikasi yang saya buat bisa berjalan dengan lancar dan responsif. Saya berkomitmen untuk membuat aplikasi yang simpel namun tetap memiliki performa yang baik.
+                                After completing a training program on application development using JavaScript and Node.js, I learned how to build efficient and user-friendly web applications. I have mastered the fundamentals of application development, using JavaScript for the front end and Node.js for the back end, ensuring that the applications I create run smoothly and responsively. I am committed to developing simple yet high-performing applications.
                             </p>
                         </div>
                     </div>
 
                     <div class="portofolio">
                         <div class="portofolio-cover">
-                            <img src="./images/portofolios/porto hotel.png" alt="porto hotel"/>
+                            <img src="./images/portofolios/AG hotel.jpg" alt="porto hotel"/>
                         </div>
 
                         <div class="portofolio-info">
@@ -191,7 +191,7 @@
                             </div>
 
                             <p>
-                                AG Hotel, tempat di mana kemewahan bertemu kenyamanan. Dengan desain elegan, fasilitas modern, dan pelayanan berkelas dunia, kami menciptakan pengalaman menginap yang tak terlupakan. Nikmati keindahan interior yang memanjakan, kamar mewah dengan pemandangan menakjubkan, dan layanan personal yang dirancang khusus untuk Anda. AG Hotel adalah definisi sejati dari kemewahan dan keistimewaan.
+                                AG Hotel, where luxury meets comfort. With elegant design, modern facilities, and world-class service, we create an unforgettable stay experience. Enjoy breathtaking interiors, luxurious rooms with stunning views, and personalized service tailored just for you. AG Hotel is the true definition of luxury and exclusivity.
                             </p>
                         </div>
                     </div>
@@ -215,7 +215,6 @@
                             <div class="education-info">
                                 <h4 class="education-title">Universitas Sains Al Qur'an</h4>
                                 <p>Currently Doing a Bachelor's Degree - Informatics Engineering</p>
-                                <h4 class="education-years">2022 - 2026</h4>
                             </div>
                         </div>
 
@@ -227,27 +226,11 @@
                             <div class="education-info">
                                 <h4 class="education-title">SMK N 1 Wonosobo</h4>
                                 <p>SMK - TKJ</p>
-                                <h4 class="education-years">2019 - 2022</h4>
-                            </div>
-                        </div>
-
-                        <div class="education">
-                            <div class="line"> 
-                                <div></div> 
-                            </div>
-
-                            <div class="education-info">
-                                <h4 class="education-title">SMP N 2 Selomerto</h4>
-                                <p>SMP - Umum</p>
-                                <h4 class="education-years">2016 - 2019</h4>
+                                <h4 class="education-years">2018 - 2021</h4>
                             </div>
                         </div>
                     </div>
                     <div class="skills-right">
-                        <p>
-                            Saya memiliki keahlian dalam berbagai teknologi dan mampu menciptakan solusi digital yang efektif dan fungsional. Selain itu, saya juga seorang pebisnis yang aktif mengelola usaha kecil. Meskipun masih dalam tahap pengembangan, saya berfokus pada strategi pemasaran dan penjualan untuk mengembangkan bisnis, sambil terus berinovasi dengan teknologi untuk menciptakan pengalaman yang lebih baik bagi pelanggan.
-                        </p>
-
                         <div class="skills-list">
                             <ul>
                                 <li>HTML</li>
@@ -294,7 +277,7 @@
                             </div>
                             <div class="contact-item-detail">
                                 <h4>Address</h4>
-                                <p>Selomerto,Wonosobo,Jawa Tengah</p>
+                                <p>Wonosobo Jawa Tengah</p>
                             </div>
                         </div>
 
@@ -330,6 +313,9 @@
                 </a>
                 <a href="https://github.com/Eka027" class="footer-link" target="_blank" aria-label="Github">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                </a>
+                <a href="https://www.linkedin.com/in/eka-fitri-wd" class="footer-link" target="_blank" aria-label="Linkedin">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 8c0 .557-.447 1.008-1 1.008s-1-.45-1-1.008c0-.557.447-1.008 1-1.008s1 .452 1 1.008zm0 2h-2v6h2v-6zm3 0h-2v6h2v-2.861c0-1.722 2.002-1.881 2.002 0v2.861h1.998v-3.359c0-3.284-3.128-3.164-4-1.548v-1.093z"/></svg>
                 </a>
             </div>
             <p>&#169; 2025 - Made by Eka Bnue Code</p>
