--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <div class="main-container">
                  <div class="nav">
                     <div class="logo">
-                        <a href="/">Eka Fitriana</a>
+                        <a href="/">Bnue</a>
                     </div>
 
                     <nav>
